[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tiles/jugador.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCenter" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 1, 1 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -1, -1 )

[node name="Label" type="Label" parent="."]
margin_left = -10.0
margin_top = 8.0
margin_right = 10.0
margin_bottom = 22.0
hint_tooltip = "health"
mouse_filter = 1
align = 1
valign = 1
